--- a/IT-blog.html
+++ b/IT-blog.html
@@ -116,7 +116,7 @@
 </div>
 <div class="card mb-3" style="width: 1400px; height: 250px; margin: auto; margin-top: 40px">
     <div class="row g-0">
-        <div class="col-md-4" style="width: 1400px; height: 250px; margin: auto; margin-top: 60px">
+        <div class="col-md-4">
             <a href="https://spartacodingclub.kr/" target="_blank">
                 <img src="https://play-lh.googleusercontent.com/TtmCcodiMcxuE7yNQAAh2hGZM-fnj4XSL-ptfPIpdZcCokioJtYbKXsdN4lFPJFCSj4"
                      class="img-fluid rounded-start" alt="..."></a>
