기술 블로그 페이지 작성_템플릿 작성2

--- a/blog-template1.html
+++ b/blog-template1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>정보 공유</title>
+    <title>version1</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -22,7 +22,7 @@
             text-shadow: 5px 5px 10px rgb(0, 0, 0);
         }
         .head {
-            background-color: rgb(44, 44, 44);
+            background-clor: rgb(44, 44, 44);
         }
         .nav-link {
             color: rgb(145, 143, 141);
