--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -130,7 +130,7 @@
         <div class="col-md-6">
             <div class="card-body">
                 <h5 class="card-title fw-bold">인텔리픽</h5>
-                <p class="card-text" style="margin-top: 40px">안녕하세요.</p>
+                <p class="card-text" style="margin-top: 40px">채용공고, AI이력서 코칭등 다양한 최신 기술을 제공합니다.<br>J인텔리픽 ‘Job 보는 눈’을 통해 가고 싶은 회사에 대한 모든 정보를 한눈에 찾아보세요!</p>
                 <p class="card-text"><small class="text-body-secondary">IT인재 채용 전문 플랫폼</small></p>
             </div>
         </div>
