--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -124,7 +124,7 @@
         style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
-                <a href="https://www.jumpit.co.kr/" target="_blank"><img
+                <a href="https://intellipick.spartacodingclub.kr/" target="_blank"><img
                         src="https://firebasestorage.googleapis.com/v0/b/sparta-510ee.appspot.com/o/intellipick.png?alt=media&token=3e7e4f89-d636-4e33-9107-93e144129ea4"
                         class="img-fluid rounded-start" alt="..."></a>
             </div>
@@ -143,7 +143,7 @@
         style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
-                <a href="https://www.jumpit.co.kr/" target="_blank"><img
+                <a href="https://www.rocketpunch.com/" target="_blank"><img
                         src="https://firebasestorage.googleapis.com/v0/b/sparta-510ee.appspot.com/o/rocket.jpg?alt=media&token=d3e2e3b5-6108-475c-8e53-6efa28ab941a"
                         class="img-fluid rounded-start" alt="..."></a>
             </div>
@@ -161,7 +161,7 @@
         style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
-                <a href="https://www.jumpit.co.kr/" target="_blank"><img
+                <a href="https://gig.saramin.co.kr/" target="_blank"><img
                         src="https://firebasestorage.googleapis.com/v0/b/sparta-510ee.appspot.com/o/image11.png?alt=media&token=a61397fa-26a0-4e9f-bdc0-2f973fc5dd44"
                         class="img-fluid rounded-start" alt="..."></a>
             </div>
@@ -179,7 +179,7 @@
         style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
-                <a href="https://www.jumpit.co.kr/" target="_blank"><img
+                <a href="https://www.wanted.co.kr/gigs" target="_blank"><img
                         src="https://firebasestorage.googleapis.com/v0/b/sparta-510ee.appspot.com/o/wantedgigs.png?alt=media&token=f9975ca5-5591-488a-b26f-819f71a833ae"
                         class="img-fluid rounded-start" alt="..."></a>
             </div>
