--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -46,6 +46,11 @@
             border-radius: 30px;
             overflow: hidden;
         }
+
+        .col-md-6 {
+            color: rgb(255, 255, 255);
+            text-shadow: 2px 2px 3px black;
+        }
     </style>
 </head>
 
