--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -42,15 +42,39 @@
         }
 
         .card {
+            background-color: gray;
             box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6), -10px -10px 20px rgba(255, 255, 255, 0.6);
             border-radius: 30px;
             overflow: hidden;
+        }
+        .card:hover {
+            background-color: rgb(61, 61, 61);
+            transform: scale(1.1);
+            transition: background-color 0.5s ease, transform 0.5s ease;
+        }
+
+        .card:not(:hover) {
+            transform: scale(1.0);
+            transition: background-color 0.5s ease, transform 0.5s ease;
         }
 
         .col-md-6 {
             color: rgb(255, 255, 255);
             text-shadow: 2px 2px 3px black;
         }
+
+        .display-3 {
+            animation: blinkText 2s linear infinite alternate;
+        }
+        @keyframes blinkText {
+            0% {
+                color: white;
+            }
+            100% {
+                color: rgb(172, 121, 255);
+            }
+        }
+
     </style>
 </head>
 
@@ -83,7 +107,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="width: 1400px; height: 250px; margin: auto; margin-top: 60px; background-color: gray; border: none">
+        style="width: 1400px; height: 250px; margin: auto; margin-top: 60px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://careerly.co.kr/" target="_blank"><img
@@ -102,7 +126,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
+        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.jumpit.co.kr/" target="_blank"><img
@@ -121,7 +145,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
+        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://intellipick.spartacodingclub.kr/" target="_blank"><img
@@ -140,7 +164,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
+        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.rocketpunch.com/" target="_blank"><img
@@ -158,7 +182,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
+        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://gig.saramin.co.kr/" target="_blank"><img
@@ -176,7 +200,7 @@
         </div>
     </div>
     <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; background-color: gray; border: none">
+        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.wanted.co.kr/gigs" target="_blank"><img
