--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -64,7 +64,7 @@
         }
 
         .display-3 {
-            animation: blinkText 2s linear infinite alternate;
+            animation: blinkText 2s infinite alternate;
         }
         @keyframes blinkText {
             0% {
