--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -19,8 +19,9 @@
 
         body {
             background-color: gray;
+            padding-top: 70px
         }
-
+        
         .main {
             background-color: rgb(88, 88, 88);
             text-align: center;
@@ -30,6 +31,10 @@
 
         .head {
             background-color: rgb(44, 44, 44);
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+            width: 100%;
         }
 
         .nav-link {
@@ -47,6 +52,7 @@
             border-radius: 30px;
             overflow: hidden;
         }
+
         .card:hover {
             background-color: rgb(61, 61, 61);
             transform: scale(1.1);
@@ -66,15 +72,16 @@
         .display-3 {
             animation: blinkText 2s infinite alternate;
         }
+
         @keyframes blinkText {
             0% {
                 color: white;
             }
+
             100% {
                 color: rgb(172, 121, 255);
             }
         }
-
     </style>
 </head>
 
@@ -97,7 +104,6 @@
             </div>
         </header>
     </div>
-    </div>
     <div class="main">
         <div class="p-2 mb-4 bg-body-tertiary rounded-3" bis_skin_checked="1">
             <div class="container-fluid py-5" bis_skin_checked="1">
@@ -106,8 +112,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="width: 1400px; height: 250px; margin: auto; margin-top: 60px; border: none">
+    <div class="card mb-3" style="width: 1400px; height: 250px; margin: auto; margin-top: 60px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://careerly.co.kr/" target="_blank"><img
@@ -125,8 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
+    <div class="card mb-3" style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.jumpit.co.kr/" target="_blank"><img
@@ -144,8 +148,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
+    <div class="card mb-3" style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://intellipick.spartacodingclub.kr/" target="_blank"><img
@@ -163,8 +166,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
+    <div class="card mb-3" style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.rocketpunch.com/" target="_blank"><img
@@ -181,8 +183,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
+    <div class="card mb-3" style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://gig.saramin.co.kr/" target="_blank"><img
@@ -199,8 +200,7 @@
             </div>
         </div>
     </div>
-    <div class="card mb-3"
-        style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
+    <div class="card mb-3" style="max-width: 1400px; height: 250px; margin: auto; margin-top: 40px; border: none">
         <div class="row g-0">
             <div class="col-md-4" style="width: 500px; height: 250px; background-size: cover;">
                 <a href="https://www.wanted.co.kr/gigs" target="_blank"><img
