코딩사이트 추천 조금수정

--- a/codingSiteRec.html
+++ b/codingSiteRec.html
@@ -24,7 +24,7 @@
       <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/codingRecommand.css" />
+        <link rel="stylesheet" href="css/codingSiteRec.css" />
         <script src="js/codingRecommand.js"></script>
         <style>
           .dropdown {
@@ -60,6 +60,28 @@
       <body>
         <div class="wrapper">
           <div class="inner">
+            <div class="head">
+        <header class="p-3 text-bg-dark">
+            <div class="container" bis_skin_checked="1">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+                    bis_skin_checked="1">
+                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                            <use xlink:href="#bootstrap"></use>
+                        </svg>
+                    </a>
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="#" class="nav-link px-2">Home</a></li>
+                        <li><a href="#" class="nav-link px-2 text-white">추천 강의</a></li>
+                        <li><a href="#" class="nav-link px-2 text-white">개발 블로그</a></li>
+                    </ul>
+                    <div class="text-end" bis_skin_checked="1">
+                        <a class="btn btn-danger" href="https://spartacodingclub.kr/" target="_blank" role="button">스파르타
+                            코딩클럽</a>
+                    </div>
+                </div>
+            </div>
+        </header>
             <div class="center">
               <h2>잘들은 강의하나 열 강의 못지않다</h2>
               <ul>
