코딩사이트 추천 재등록

--- a/codingSiteRec.html
+++ b/codingSiteRec.html
@@ -77,7 +77,7 @@
                     </ul>
                     <div class="text-end" bis_skin_checked="1">
                         <a class="btn btn-danger" href="https://spartacodingclub.kr/" target="_blank" role="button">스파르타
-                            코딩클럽</a>
+                            코딩클럽 d</a>
                     </div>
                 </div>
             </div>
