--- a/page-form-3.html
+++ b/page-form-3.html
@@ -14,16 +14,20 @@
         }
         body {
             background-color: grey;
+            padding-top: 70px
         }
         .main {
-
             background-color: rgb(88, 88, 88);
             text-align: center;
             color: rgb(236, 236, 236);
             text-shadow: 5px 5px 10px rgb(0, 0, 0);
         }
         .head {
-            background-clor: rgb(44, 44, 44);
+            background-color: rgb(44, 44, 44);
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+            width: 100%;
         }
         .nav-link {
             color: rgb(145, 143, 141);
@@ -81,11 +85,7 @@
         <div class="container" bis_skin_checked="1">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
                  bis_skin_checked="1">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
-                </a>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a  href="#" onclick="showPageForm(1)" class="nav-link px-2">Home</a></li>
                     <li><a  href="#" onclick="showPageForm(2)"class="nav-link px-2 text-white">추천 강의</a></li>
