--- a/codingSiteRec.html
+++ b/codingSiteRec.html
@@ -59,7 +59,7 @@
       </head>
       <body>
         <div class="wrapper">
-          <div class="inner">
+
             <div class="head">
         <header class="p-3 text-bg-dark">
             <div class="container" bis_skin_checked="1">
@@ -72,8 +72,8 @@
                     </a>
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="#" class="nav-link px-2">Home</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white">추천 강의</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white">개발 블로그</a></li>
+                        <li><a href="#" class="nav-link px-2">추천 강의</a></li>
+                        <li><a href="#" class="nav-link px-2">개발 블로그</a></li>
                     </ul>
                     <div class="text-end" bis_skin_checked="1">
                         <a class="btn btn-danger" href="https://spartacodingclub.kr/" target="_blank" role="button">스파르타
@@ -84,9 +84,10 @@
         </header>
             <div class="center">
               <h2>잘들은 강의하나 열 강의 못지않다</h2>
-              <ul>
+              <ul class="drop">
                 <li class="dropdown">
-                  <button class="java">Java</button>
+                  <button class="java">
+                    <a href="">Java</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for Java dropdown goes here -->
                     <p>
@@ -167,7 +168,7 @@
               </ul>
             </div>
           </div>
-        </div>
+
       </body>
     </html>
   </body>
