--- a/codingSiteRec.html
+++ b/codingSiteRec.html
@@ -77,7 +77,7 @@
                     </ul>
                     <div class="text-end" bis_skin_checked="1">
                         <a class="btn btn-danger" href="https://spartacodingclub.kr/" target="_blank" role="button">스파르타
-                            코딩클럽 d</a>
+                            코딩클럽</a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
               <ul class="drop">
                 <li class="dropdown">
                   <button class="java">
-                    <a href="">Java</a></button>
+                    <a href="" class="white_a">Java</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for Java dropdown goes here -->
                     <p>
@@ -102,7 +102,7 @@
                   </div>
                 </li>
                 <li class="dropdown">
-                  <button class="spring">Spring</button>
+                  <button class="spring"><a href="#"class="white_a">spring</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for Spring dropdown goes here -->
                     <p>
@@ -118,7 +118,7 @@
                   </div>
                 </li>
                 <li class="dropdown">
-                  <button class="sql">SQL</button>
+                  <button class="sql"><a href="#"class="white_a">sql</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for SQL dropdown goes here -->
                     <p>
@@ -134,7 +134,7 @@
                   </div>
                 </li>
                 <li class="dropdown">
-                  <button class="aws">AWS</button>
+                  <button class="aws"><a href="#"class="white_a">aws</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for AWS dropdown goes here -->
                     <p>
@@ -149,20 +149,20 @@
                   </div>
                 </li>
                 <li class="dropdown">
-                  <button class="jsp">JSP</button>
+                  <button class="jsp"><a href="#"class="white_a">jsp</a></button>
                   <div class="dropdown-content">
                     <!-- Your content for JSP dropdown goes here -->
                     <p>
                       <a
-                        href="https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EC%9B%90%EB%A6%AC-%EA%B8%B0%EB%B3%B8%ED%8E%B8"
-                        >김영한 - 스프링 기본</a
+                        href="https://www.inflearn.com/course/%EC%8B%A4%EC%A0%84-jsp_renew"
+                        >실전 jsp</a
                       >
                       <a
-                        href="https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-db-1"
-                        >김영한 - 스프링 db</a
+                        href="https://www.inflearn.com/course/jsp-%EC%9B%B9%EA%B0%9C%EB%B0%9C-mvc-model2-%EC%A4%91%EA%B8%89"
+                        >jsp MVC</a
                       >
                     </p>
-                    ..
+                    
                   </div>
                 </li>
               </ul>
