--- a/page-form-3.html
+++ b/page-form-3.html
@@ -134,7 +134,7 @@
                 <p class="card-text"></p>
                 <p class="card-text">카카오의 기술 블로그로, 카카오 서비스를 만드는 개발자들의 실제 개발 사례를 중심으로 기술과 노하우를 전달합니다.</p>
                 <p class="card-text">이벤트와 오픈 소스, 채용 정보도 확인할 수 있습니다.</p>
-                <a href="https://techblog.woowahan.com/">카카오테크 링크</a>
+                <a href="https://techblog.woowahan.com/">카카오테크 링크 바로가기</a>
             </div>
         </div>
     </div>
@@ -153,7 +153,7 @@
                 <p class="card-text"></p>
                 <p class="card-text">국내 온라인 쇼핑 사이트 쿠팡의 기술 블로그입니다.</p>
                 <p class="card-text">쿠팡 글로벌 개발팀이 쿠팡을 만들고 진화시키면서 배운 점과 얻은 교훈을 비롯해 다양한 테크 관련 이야기를 전달합니다.</p>
-                <a href="https://medium.com/coupang-engineering/kr/home">쿠팡 기술 블로그 링크</a>
+                <a href="https://medium.com/coupang-engineering/kr/home">쿠팡 기술 블로그 링크 바로가기</a>
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
                 <p class="card-text"></p>
                 <p class="card-text">국내 대표 푸드 테크 서비스 배달의 민족을 운영하는 우아한 형제들의 기술 블로그입니다.</p>
                 <p class="card-text">우아한 형제들의 대표적 개발자 양성 프로그램인 우아한 테크코스의 후기 포스팅이 올라오기도 합니다..</p>
-                <a href="https://techblog.woowahan.com/">우아한 기술 테크 링크</a>
+                <a href="https://techblog.woowahan.com/">우아한 기술 테크 링크 바로가기</a>
             </div>
         </div>
     </div>
@@ -208,7 +208,7 @@
                 <h5 class="card-title fw-bold">NHN 기술블로그</h5>
                 <p class="card-text">종합 IT 기업 NHN의 기술 블로그입니다.</p>
                 <p class="card-text">블로그 메인 화면에서 기술을 공유하고 함께 성장해 가는 개발 문화를 추구한다고 밝히고 있습니다. </p>
-                <a href="https://meetup.nhncloud.com/">NHN 기술블로그 링크</a>
+                <a href="https://meetup.nhncloud.com/">NHN 기술블로그 링크 바로가기</a>
             </div>
         </div>
     </div>
@@ -226,7 +226,7 @@
                 <h5 class="card-title fw-bold">당근마켓 기술블로그</h5>
                 <p class="card-text">2020년 6월 누적 2천만 다운로드, 월 순 방문자수 800만 명을 돌파한 중고거래 앱 서비스 당근 마켓의 팀 블로그입니다.</p>
                 <p class="card-text">개발, 테크 관련 콘텐츠가 주를 이룹니다.</p>
-                <a href="https://medium.com/daangn">당근마켓 기술블로그 링크</a>
+                <a href="https://medium.com/daangn">당근마켓 기술블로그 링크 바로가기</a>
             </div>
         </div>
     </div>
