main 에 page-form-3 커밋하기

--- a/page-form-3.html
+++ b/page-form-3.html
@@ -171,7 +171,7 @@
                 <h5 class="card-title fw-bold">마켓 컬리 Tech Blog</h5>
                 <p class="card-text"></p>
                 <p class="card-text">코로나 19 사태로 인해 최근 가장 주목받는 기업 중 하나가 된 푸드 테크 기업 마켓컬리의 기술 블로그입니다.</p>
-                <a href="https://helloworld.kurly.com/">컬리 기술 블로그</a>
+                <a href="https://helloworld.kurly.com/">컬리 기술 블로그 바로가기</a>
             </div>
         </div>
     </div>
