--- a/SharingInfo.html
+++ b/SharingInfo.html
@@ -98,10 +98,10 @@
                         <script>
                             function showPageForm(pageNumber) {
                                 if (pageNumber === 1) {
-                                    window.location.href = 'page-form-1.html';
+                                    window.location.href = 'SharingInfo.html';
                                 }
                                 if (pageNumber === 2) {
-                                    window.location.href = 'page-form-2.html';
+                                    window.location.href = 'codingSiteRec.html';
                                 }
                                 if (pageNumber === 3) {
                                     window.location.href = 'page-form-3.html';
