--- a/page-form-1.html
+++ b/page-form-1.html
@@ -99,10 +99,10 @@
                         <script>
                             function showPageForm(pageNumber) {
                                 if (pageNumber === 1) {
-                                    window.location.href = 'SharingInfo.html';
+                                    window.location.href = 'page-form-1.html';
                                 }
                                 if (pageNumber === 2) {
-                                    window.location.href = 'codingSiteRec.html';
+                                    window.location.href = 'page-form-2.html';
                                 }
                                 if (pageNumber === 3) {
                                     window.location.href = 'page-form-3.html';
