--- a/page-form-3.html
+++ b/page-form-3.html
@@ -135,7 +135,7 @@
                 <p class="card-text"></p>
                 <p class="card-text">카카오의 기술 블로그로, 카카오 서비스를 만드는 개발자들의 실제 개발 사례를 중심으로 기술과 노하우를 전달합니다.</p>
                 <p class="card-text">이벤트와 오픈 소스, 채용 정보도 확인할 수 있습니다.</p>
-                <a href="https://techblog.woowahan.com/">카카오테크 링크 바로가기</a>
+                <a href="https://tech.kakao.com/blog/">카카오테크 링크 바로가기</a>
             </div>
         </div>
     </div>
